Perkin-UAT/force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Account Custom Tab Settings for the Account Hierarchy VF page</description>
    <label>Account Custom Tab Settings</label>
</CustomObject>