Perkin-UAT/force-app/main/default/objects/Account__c/fields/Field_List__c.field-meta.xml
<CustomField>
    <fullName>Field_List__c</fullName>
    <description>The List of Fields that are to be displayed on the VF page Columns</description>
    <inlineHelpText>The List of Fields that are to be displayed on the VF page Columns</inlineHelpText>
    <label>Field List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>