Perkin-UAT/force-app/main/default/objects/Account__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The object API Name</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>