Perkin-UAT/force-app/main/default/objects/Account__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The Order in which the Object tab has to be displayed</description>
    <inlineHelpText>The Order in which the tab has to be displayed</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>