Perkin-UAT/force-app/main/default/objects/Account__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <description>The Object name that will appear on the VF page as a Tab</description>
    <label>Tab Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>